--- a/templates/index.html
+++ b/templates/index.html
@@ -6,12 +6,12 @@
 </head>
 <body>
 	<form action="/" method="post">
-		<label>Name: </label><input type="text" name="name" placeholder="Name">
+		<input type="text" name="name" placeholder="Name">
 		<input type="text" name="post" placeholder="Content">
 		<input type="submit" value="Submit">
 	</form>
 	{% for post in posts %}
-	<div>{{ post[1] + ': ' + ppost[2]}}</div>
+	<div>{{ post[1] + ': ' + post[2] }}</div>
 	{% endfor %}
 </body>
 </html>
